            escaped so as not to be XML-toxic.
          Added geo:lat, geo:long and RSS link attributes to items in 
            category/locale listings to facilitate integration with mapping
            applications.
          Added owl:sameAs property to RDF output for nodes that are redirects
            to other nodes.
        Reorder navigation bar to provide more logical groupings.
        Add "format=plain" option for all-nodes index listing and associated
          template plain_index.tt.
        New message to appear on pages when you have been redirected
          informing you of the fact.
        Stop showing potentially very long map URLs in metadata section of
          node display.
        Replace ugly obliques in display of categories and locales with more
          natural commas; change "locale" to "locales" in label.
        Replace <label> tags in display_metadata.tt with <span
          class="metadata_label">.
        Wanted pages listing now displays, and sorts by, the number of nodes
        pointing to each node.
        Prevent redirect loops.

0.47    15 January 2005
        Fixed bug with list_all_versions for nodes with only one version.
        Extended config changes to examples/reindex.pl (thanks jimbo).
        Now require CGI::Wiki 0.62 to fix bug with deleting versions.
        Try to ensure that a .htaccess file protecting wiki.conf is installed.
        Allow for external URLs for Text Formatting help.
        Home node recent changes box now flags new entries.
        Made default city and country be blank; specify them if you want them.
        Missing PREREQUISITE on Plucene added.
        Added CSS id "maincontent" to exclude the navbar and footer. Misc
        template tidying including removing old layout tables.

0.46	21 December 2004
        Minor bug fixes: remove bogus edit link on index listings,
          add missing default behaviour for geolocation
        Update supersearch help text URL.