@@ -222,7 +222,7 @@ my $build = OpenGuides::Build->new(
         'CGI::Wiki::Plugin::Categoriser'  => 0,
 	'CGI::Wiki::Plugin::Diff'         => '0.07', # earlier buggy
 	'CGI::Wiki::Plugin::Locator::Grid'=> '0.02', # cope with sqlite 3
-	'CGI::Wiki::Plugin::RSS::ModWiki' => '0.06', # for fancy stuff
+	'CGI::Wiki::Plugin::RSS::ModWiki' => '0.071', # provides RSS timestamp
         'CGI::Wiki::Plugin::RSS::Reader'  => '1.3',  # earlier versions don't support RSS 2.0
         'Class::Accessor'                 => 0,
 	'Config::Tiny'                    => 0,
